cli/tests/ui/binding_unknown_child.stderr
Error: manifest::unknown_binding_child

  × check failed
  ╰─▶ binding references unknown child `#nope`
    ╭─[<CARGO_MANIFEST_DIR>/tests/ui/binding_unknown_child.json5:19:31]
 18 │   bindings: [
 19 │     { to: "#green.llm", from: "#nope.llm" },
    ·                               ─────┬─────
    ·                                    ╰── unknown child referenced here
 20 │     { to: "#green.env", from: "#tau2.env" },
    ╰────

